# python-project-50

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml
gendiff/: __init__.py  diff.py  parser.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_parser.py
